# qaria

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
cmake/: AddQtExecutable.cmake  CheckCompilerFlags.cmake  CheckWarningFlags.cmake
src/: CMakeLists.txt  aria2c.cpp  aria2c.h  aria2optionsbuilder.h  common.h  datasizedelegate.cpp  datasizedelegate.h  downloadfilterproxymodel.cpp  downloadfilterproxymodel.h  downloadtablemodel.cpp  downloadtablemodel.h  filetreewidget.cpp  filetreewidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newbittorrentdialog.cpp  newbittorrentdialog.h  newbittorrentdialog.ui  newdownloaddialog.cpp  newdownloaddialog.h  newdownloaddialog.ui  optionsdialog.cpp  optionsdialog.h  optionsdialog.ui  progressitemdelegate.cpp  progressitemdelegate.h  qaria2.rep  qaria2_zh_CN.ts  qaria2host.h  qaria_zh_CN.ts  remainingtimedelegate.cpp  remainingtimedelegate.h  resource.rc.in  scraperdialog.cpp  scraperdialog.h  scraperdialog.ui  setup.iss  statusdelegate.cpp  (+1 more)
src/icons/: icons.qrc
tools/: CMakeLists.txt  main.cpp
